minzc/tests/backend_e2e/results/basic_math_llvm.txt
  ✅ Code generation successful

=== Generated Code Analysis ===
; MinZ LLVM IR generated code
; Target: LLVM IR (compatible with LLVM 10+)

declare i32 @printf(i8*, ...)
declare i32 @putchar(i32)
declare void @exit(i32)
declare i8* @malloc(i64)
declare void @free(i8*)

; Function declarations

define void @tests_backend_e2e_sources_basic_math_main() {
entry:
  %x.addr = alloca i8
  %y.addr = alloca i8
  %sum.addr = alloca i8
  %diff.addr = alloca i8
  %prod.addr = alloca i8
  %r2 = add i8 0, 42
  store i8 %r2, i8* %x.addr
  %r4 = add i8 0, 10
  store i8 %r4, i8* %y.addr
  %r6 = load i8, i8* %x.addr
  %r7 = load i8, i8* %y.addr
  %r8 = add i8 %r6, %r7
  store i8 %r8, i8* %sum.addr
  %r10 = load i8, i8* %x.addr
  %r11 = load i8, i8* %y.addr
  %r12 = sub i8 %r10, %r11
  store i8 %r12, i8* %diff.addr
  %r14 = load i8, i8* %x.addr
  %r15 = add i8 0, 2
  %r16 = mul i8 %r14, %r15
  store i8 %r16, i8* %prod.addr
  ret void
}


; Runtime functions
define void @print_u8(i8 %value) {
  %1 = zext i8 %value to i32
  %2 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.u8, i32 0, i32 0), i32 %1)
  ret void
}

@.str.u8 = private constant [4 x i8] c"%u\0A\00"

; main wrapper
define i32 @main() {
  call void @examples_test_llvm_main()
  🔨 Attempting binary generation...
llc: error: llc: tests/backend_e2e/outputs/basic_math_llvm.ll:50:13: error: use of undefined value '@examples_test_llvm_main'
  call void @examples_test_llvm_main()
            ^
  ❌ Binary generation failed
